@@ -1,5 +1,9 @@
 [b]Version 0.6.2[/b]:
 
+(2008-07-16)
+ * Fix: remember the last directory used when adding files to the 
+   playlist. Fixes bug #2019139.
+
 (2008-07-13)
  * Another fix for Qt 4.4. Dragging files to the playlist didn't work.
  * Added the Slovenian translation, by Janez Troha <janez.troha@gmail.com>.
